Calendar Toolbar delete

--- a/MyApplication/app/src/main/res/layout/activity_home.xml
+++ b/MyApplication/app/src/main/res/layout/activity_home.xml
@@ -1,4 +1,5 @@
 <TabHost xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@android:id/tabhost"
     android:layout_width="match_parent"
@@ -646,55 +647,12 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        xmlns:android="http://schemas.android.com/apk/res/android"
-                        xmlns:app="http://schemas.android.com/apk/res-auto"
-                        xmlns:tools="http://schemas.android.com/tools"
+                    <include
+                        android:id="@+id/include"
+                        layout="@layout/activity_schedule_main"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:id="@+id/constraintLayout">
+                        android:layout_height="match_parent" />
 
-                        <com.google.android.material.appbar.AppBarLayout
-                            android:layout_height="wrap_content"
-                            android:layout_width="0dp"
-                            android:theme="@style/AppTheme.AppBarOverlay"
-                            android:id="@+id/appBarLayout"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.0">
-
-                            <androidx.appcompat.widget.Toolbar
-                                android:id="@+id/toolbar"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:background="?attr/colorPrimary"
-                                app:popupTheme="@style/AppTheme.PopupOverlay"
-                                app:title="Simple Calendar"
-                                app:titleTextColor="@color/design_default_color_primary"/>
-
-                        </com.google.android.material.appbar.AppBarLayout>
-
-                        <include layout="@layout/activity_schedule_content"
-                            android:layout_height="0dp"
-                            android:layout_width="0dp"
-                            android:id="@+id/include"
-                            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintBottom_toBottomOf="parent"/>
-
-                        <com.google.android.material.floatingactionbutton.FloatingActionButton
-                            android:id="@+id/fab"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            app:srcCompat="@drawable/ic_add" app:backgroundTint="@color/design_default_color_primary"
-                            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="16dp"
-                            android:layout_marginRight="16dp" android:layout_marginBottom="16dp"
-                            app:layout_constraintEnd_toEndOf="parent"/>
-
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
                 </LinearLayout>
 
             </LinearLayout>
