--- a/MyApplication/app/src/main/res/layout/activity_schedule_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_schedule_main.xml
@@ -12,6 +12,24 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:theme="@style/AppTheme.AppBarOverlay"
+            android:id="@+id/appBarLayout" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0">
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="?attr/colorPrimary"
+                app:popupTheme="@style/AppTheme.PopupOverlay"
+                app:title="Simple Calendar" app:titleTextColor="@color/design_default_color_primary"/>
+
+        </com.google.android.material.appbar.AppBarLayout>
+
         <include
             android:id="@+id/include"
             layout="@layout/activity_schedule_content"
