--- a/MyApplication/app/src/main/res/layout/activity_home.xml
+++ b/MyApplication/app/src/main/res/layout/activity_home.xml
@@ -162,6 +162,12 @@
                     android:id="@+id/LinearMainpage"
                     android:orientation="vertical">
 
+                    <Spinner
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/spinner_member"/>
+
+
                     <EditText
                         android:id="@+id/etToken"
                         android:layout_width="match_parent"
