--- a/MyApplication/app/src/main/res/layout/activity_home.xml
+++ b/MyApplication/app/src/main/res/layout/activity_home.xml
@@ -708,87 +708,13 @@
                     android:textSize="27dp"
                     android:textStyle="bold"></TextView>
 
-                <androidx.cardview.widget.CardView
-                    android:layout_margin="5dp"
-                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/card_view"
-                    android:layout_gravity="center"
-                    android:layout_width="match_parent"
+                <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    card_view:cardCornerRadius="4dp">
+                    android:orientation="vertical"
+                    android:id="@+id/album_layout">
 
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="130dp"
-                        android:src="@drawable/sky"
-                        android:id="@+id/medicineImageView"
-                        android:background="@drawable/roundback"
-                        android:scaleType="centerCrop"/>
-
-                    <TextView
-                        style="@style/nanumTextView"
-                        android:layout_margin="10dp"
-                        android:id="@+id/info_text"
-                        android:text="2018년"
-                        android:textColor="#d3d3d3"
-                        android:textStyle="bold|italic"
-                        android:textSize="30dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_margin="5dp"
-                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                    android:layout_gravity="center"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    card_view:cardCornerRadius="4dp">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="130dp"
-                        android:src="@drawable/catmeow"
-                        android:id="@+id/imageView1"
-                        android:scaleType="centerCrop"/>
-
-                    <TextView
-                        style="@style/nanumTextView"
-                        android:layout_margin="10dp"
-                        android:text="2019년"
-                        android:textColor="#d3d3d3"
-                        android:textStyle="bold|italic"
-                        android:textSize="30dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_margin="5dp"
-                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                    android:layout_gravity="center"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    card_view:cardCornerRadius="4dp">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="130dp"
-                        android:src="@drawable/nightsky"
-                        android:id="@+id/imageView2"
-                        android:background="@drawable/roundback"
-                        android:scaleType="centerCrop"/>
-
-                    <TextView
-                        style="@style/nanumTextView"
-                        android:layout_margin="10dp"
-                        android:text="2020년"
-                        android:textColor="#d3d3d3"
-                        android:textStyle="bold|italic"
-                        android:textSize="30dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
-                </androidx.cardview.widget.CardView>
+                </LinearLayout>
             </LinearLayout>
         </FrameLayout>
         <TabWidget
