--- a/MyApplication/app/src/main/res/layout/activity_home.xml
+++ b/MyApplication/app/src/main/res/layout/activity_home.xml
@@ -382,14 +382,55 @@
                     android:layout_height="match_parent"
                     android:id="@+id/LinearMain2"
                     android:orientation="vertical">
-                    <TextView
+<!--                    <TextView-->
+<!--                        style="@style/nanumTextView"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:gravity="center"-->
+<!--                        android:text="안부 페이지"-->
+<!--                        android:textSize="30dp"-->
+<!--                        android:textStyle="bold"/>-->
+                    <Button
                         style="@style/nanumTextView"
+                        android:id="@+id/btnCall"
+                        android:textSize="15dp"
+                        android:textStyle="bold"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:text="안부 페이지"
-                        android:textSize="30dp"
-                        android:textStyle="bold"/>
+                        android:layout_weight="0"
+                        android:text="전화기록 가져오기"
+                        android:textColor="@color/black"
+                        app:backgroundTint="#FCBF48">
+                    </Button>
+
+                    <ScrollView
+                        android:id="@+id/scrollView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:scrollbarAlwaysDrawVerticalTrack="true"
+                        android:scrollbarFadeDuration="0"
+                        android:scrollbarSize="2dp">
+
+                        <LinearLayout
+                            android:id="@+id/dialog_contain"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+
+                            <!-- include layout_content.xml -->
+
+                        </LinearLayout>
+                    </ScrollView>
+
+<!--                    <EditText-->
+<!--                        style="@style/nanumTextView"-->
+<!--                        android:id="@+id/edtCall"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="1000dp"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:autofillHints="여기에 표시됩니다"-->
+<!--                        android:hint="asdf"-->
+<!--                        android:textColorHint="@color/black" />-->
                 </LinearLayout>
 
                 <!--      minigame 미니게임 page         -->
