--- a/MyApplication/app/src/main/res/layout/activity_add_account.xml
+++ b/MyApplication/app/src/main/res/layout/activity_add_account.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".AddAccount">
+    tools:context=".Home_Board.AddAccount">
 
     <LinearLayout
         android:layout_width="match_parent"
