--- a/MyApplication/app/src/main/res/layout/activity_album_content.xml
+++ b/MyApplication/app/src/main/res/layout/activity_album_content.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".AlbumActivity">
+    tools:context=".Home_Board.AlbumActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
