--- a/MyApplication/app/src/main/res/layout/home_activity.xml
+++ b/MyApplication/app/src/main/res/layout/home_activity.xml
@@ -5,7 +5,7 @@
     android:id="@+id/homeRootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeActivity">
+    tools:context=".Home_Board.HomeActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
